src/objects/Opportunity.object
<CustomObject>
    <businessProcesses>
        <fullName>Data Customer Opportunity Process</fullName>
        <description>Opportunity Process for ITA Data to be accessed by an external Customer.</description>
        <isActive>true</isActive>
        <values>
            <fullName>Closed Lost</fullName>
        </values>
        <values>
            <fullName>Closed Won</fullName>
        </values>
        <values>
            <fullName>Id%2E Decision Makers</fullName>
        </values>
        <values>
            <fullName>Needs Analysis</fullName>
        </values>
        <values>
            <fullName>Negotiation%2FReview</fullName>
        </values>
        <values>
            <fullName>Perception Analysis</fullName>
        </values>
        <values>
            <fullName>Proposal%2FPrice Quote</fullName>
        </values>
        <values>
            <fullName>Prospecting</fullName>
        </values>
        <values>
            <fullName>Qualification</fullName>
        </values>
        <values>
            <fullName>Value Proposition</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>Data Partner Opportunity Process</fullName>
        <description>Opportunity Process for Data to be accessed by ITA by Partners.</description>
        <isActive>true</isActive>
        <values>
            <fullName>Closed Lost</fullName>
        </values>
        <values>
            <fullName>Closed Won</fullName>
        </values>
        <values>
            <fullName>Needs Analysis</fullName>
        </values>
        <values>
            <fullName>Negotiation%2FReview</fullName>
        </values>
        <values>
            <fullName>Proposal%2FPrice Quote</fullName>
        </values>
        <values>
            <fullName>Prospecting</fullName>
        </values>
        <values>
            <fullName>Qualification</fullName>
        </values>
    </businessProcesses>
    <fields>
        <fullName>APIEndpoint__c</fullName>
        <label>API Endpoint</label>
        <picklist>
            <picklistValues>
                <fullName>Business Service Providers</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Consolidated Screening List</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>De Minimis</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FAQs on Exporting</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ITA Offices &amp; Centers</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ITA Taxonomies</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Market Research Library</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tariff Rates</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Trade Events</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Trade Leads</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Trade News &amp; Articles</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Zip Code to USEAC</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>AccountCategory__c</fullName>
        <formula>TEXT(Account.Category__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Category</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Category__c</fullName>
        <label>Category</label>
        <picklist>
            <picklistValues>
                <fullName>Business Service Providers</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Codes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Contacts</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Country Pages</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Data</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Events</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Form</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Links</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Location</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Market Research</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Procurment Opportunity</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Promotion Opportunity</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Reference</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Service</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Statistics</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tariff Schedules</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Video</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Web Content</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>DataSet__c</fullName>
        <label>Data Set</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Site__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Site</label>
        <referenceTo>Site__c</referenceTo>
        <relationshipLabel>Opportunities</relationshipLabel>
        <relationshipName>Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SourceTechnology__c</fullName>
        <label>Source Technology</label>
        <picklist>
            <picklistValues>
                <fullName>Close</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>API</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Email</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Excel</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lotus Notes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RSS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Salesforce</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SharePoint</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Web Service</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Word Document</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>XML</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Trade_Community_User__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Trade Community User</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Opportunities</relationshipLabel>
        <relationshipName>Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <listViews>
        <fullName>AllOpportunities</fullName>
        <filterScope>Everything</filterScope>
        <label>All Opportunities</label>
    </listViews>
    <listViews>
        <fullName>ClosingNextMonth</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.CLOSE_DATE</field>
            <operation>equals</operation>
            <value>NEXT_MONTH</value>
        </filters>
        <label>Closing Next Month</label>
    </listViews>
    <listViews>
        <fullName>ClosingThisMonth</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.CLOSE_DATE</field>
            <operation>equals</operation>
            <value>THIS_MONTH</value>
        </filters>
        <label>Closing This Month</label>
    </listViews>
    <listViews>
        <fullName>MyOpportunities</fullName>
        <filterScope>Mine</filterScope>
        <label>My Opportunities</label>
    </listViews>
    <listViews>
        <fullName>NewThisWeek</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.CREATED_DATE</field>
            <operation>equals</operation>
            <value>THIS_WEEK</value>
        </filters>
        <label>New This Week</label>
    </listViews>
    <listViews>
        <fullName>Won</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.WON</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.CLOSED</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Won</label>
    </listViews>
    <recordTypes>
        <fullName>Data_Customer_Opportunity</fullName>
        <active>true</active>
        <businessProcess>Data Customer Opportunity Process</businessProcess>
        <description>Opportunity for Data to be accessed by an external Customer.</description>
        <label>Data Customer Opportunity</label>
    </recordTypes>
    <recordTypes>
        <fullName>Data_Partner_Opportunity</fullName>
        <active>true</active>
        <businessProcess>Data Partner Opportunity Process</businessProcess>
        <description>Opportunity for external Partner Data to be accessed by ITA.</description>
        <label>Data Partner Opportunity</label>
    </recordTypes>
    <sharingModel>Read</sharingModel>
</CustomObject>